[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/EnemyScenes/BasicEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BlasterEnemy.gd" type="Script" id=2]

[node name="BlasterEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frame = 0

[node name="BlasterEnemyTimer" type="Timer" parent="." index="3"]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="BlasterEnemyTimer" to="." method="_on_BlasterEnemyTimer_timeout"]
